--- a/delaTorreLopezJose_EERR_ExamenFinal/delaTorreLopezJose_EERR_ExamenFinal.csproj
+++ b/delaTorreLopezJose_EERR_ExamenFinal/delaTorreLopezJose_EERR_ExamenFinal.csproj
@@ -42,11 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Main\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
