Primeras clases creadas con la interfaz básica.

--- a/delaTorreLopezJose_EERR_ExamenFinal/delaTorreLopezJose_EERR_ExamenFinal.csproj
+++ b/delaTorreLopezJose_EERR_ExamenFinal/delaTorreLopezJose_EERR_ExamenFinal.csproj
@@ -42,7 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\ISaludable.cs" />
     <Compile Include="Main\Program.cs" />
+    <Compile Include="Models\Alumno.cs" />
+    <Compile Include="Models\Persona.cs" />
+    <Compile Include="Models\Profesor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -50,7 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Common\" />
-    <Folder Include="Models\" />
+    <Folder Include="Views\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
